# musics

./: Cargo.toml  LICENSE  readme.md
.cargo/: config.toml
musics/: Cargo.toml
musics/src/: config.rs  library.rs  library_search_view.rs  main.rs  playlist.rs
sound/: Cargo.toml
sound/src/: decoder.rs  lib.rs
