[package]
name = "musics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sound = { path = "../sound" }

eframe = { version = "0.20.1", features = ["persistence"] }
camino.workspace = true
slotmap = "1.0.6"
rfd = "0.11.0"
serde = "1.0.*"
serde_derive = "1.0.*"
image = "0.24.1"
fastrand = "1.8.0"