[package]
name = "sound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
symphonia = "0.5.2"
rodio = { version = "0.16.0", default-features = false, features = ["symphonia"] }
camino.workspace = true